# galileo-test

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: 10_otel_openinference.ipynb  12_manual_otel.ipynb  1_chatbot.ipynb  2_rag.ipynb  3_tools.ipynb  4_experiments.ipynb  5_guardrails.ipynb  6_custom_eval.ipynb  7_annotations.ipynb  8_agent_control.ipynb  __init__.py  base.py  chatbot.ipynb  custom_eval.ipynb  experiments.ipynb  guardrails.ipynb  rag.ipynb  tools.ipynb
docs/: galileo-features.md  scenarios.md  terminology.md
notebooks/: 11_pure_otel.ipynb  13_customer_otel_validation.ipynb  14_cost_tracking.ipynb  15_cost_tracking_native.ipynb  16_cost_tracking_custom_judge.ipynb  17_cost_tracking_otel.ipynb  19_cross_agent_tracing.ipynb  1_chatbot.ipynb  2_rag.ipynb  5_guardrails.ipynb  6_custom_eval.ipynb  8_agent_control.ipynb  9_auto_tune.ipynb
