[project]
name = "robin-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "galileo[openai,otel]>=1.49.0",
    "ipykernel>=7.2.0",
    "python-dotenv>=1.2.2",
    "agent-control-sdk",
    "nest-asyncio>=1.6.0",
    "openinference-instrumentation-openai>=0.1.44",
    "opentelemetry-instrumentation-requests>=0.62b0",
    "nbconvert>=7.17.1",
]
